# ale-my-eyes

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  build_dispatch.yml  ci.yml
ale-cli/: Cargo.toml
ale-cli/src/: main.rs
ale-core/: Cargo.toml
ale-core/src/: asr.rs  cloud.rs  config.rs  downloader.rs  error.rs  inference.rs  lib.rs  llm.rs  manager.rs  tts.rs  types.rs  vlm.rs
ale-gui/: Cargo.toml
ale-gui/frontend/: README.md  index.html  package.json  vite.config.ts
ale-gui/frontend/public/: manifest.json
ale-gui/frontend/src/: App.vue  main.ts  router.ts  style.css
ale-gui/frontend/src/components/: StatusCard.vue  VoiceButton.vue
ale-gui/frontend/src/views/: HomeView.vue  ModelView.vue  SettingsView.vue
ale-gui/src/: main.rs
ale-server/: Cargo.toml
ale-server/src/: main.rs
scripts/: build-release.sh  create-release.sh  package-android.sh  package-linux.sh  package-windows.sh
