[package]
name = "ale-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Ale, My Eyes!"
license = "MIT"

[dependencies]
ale-core = { path = "../ale-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"